--- a/9-resipee/package.json
+++ b/9-resipee/package.json
@@ -4,7 +4,9 @@
   "description": "Recipee project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
   "keywords": [
     "recipe",
@@ -14,7 +16,17 @@
   "author": "Tobi Forsdyke",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.43.0"
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
+    "html-webpack-plugin": "^4.2.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.4",
+    "regenerator-runtime": "^0.13.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {}
 }
